syntax = "proto3";

package app;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "api/mall/common.proto";
import "validate/validate.proto";
option go_package = "mall-go/app";

service App {

  rpc GetBannerById(IdRequest) returns (Banner) {
    option (google.api.http) = {
      get : "/banner/id/{id}"
    };
  }
  rpc GetBannerByName(nameRequest) returns (Banner) {
    option (google.api.http) = {
      get : "/banner/name/{name}"
    };
  }
  rpc GetThemeByNames(ThemeByNamesRequest) returns (Themes) {
    option (google.api.http) = {
      get : "/theme/by/names"
    };
  }
  rpc GetThemeWithSpu(nameRequest) returns (ThemeSpu) {
    option (google.api.http) = {
      get : "/theme/name/{name}/with_spu"
    };
  }
  rpc GetActivityByName(nameRequest) returns (Activity) {
    option (google.api.http) = {
      get : "/activity/name/{name}"
    };
  }
  rpc GetActivityWithCoupon(nameRequest)
      returns (ActivityCoupon) {
    option (google.api.http) = {
      get : "/activity/name/{name}/with_coupon"
    };
  }

  rpc ListCategory(google.protobuf.Empty) returns (Categories) {
    option (google.api.http) = {
      get : "/category"
    };
  }
  rpc ListGridCategory(google.protobuf.Empty) returns (GridCategories) {
    option (google.api.http) = {
      get : "/category/grid"
    };
  }

  rpc GetTagByType(typeRequest) returns (Tags) {
    option (google.api.http) = {
      get : "/tag/type/{type}"
    };
  }
  rpc GetCouponByCategory(IdRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/category/{id}"
    };
  }
  rpc GetCouponByType(typeRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/type/{type}"
    };
  }
  rpc GetUserCouponByStatus(statusRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/user/status/{status}"
    };
  }
  rpc GetUserCouponByStatusWithCategory(statusRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/user/status/{status}/with_category"
    };
  }

  rpc CreateUserCoupon(CreateUserCouponRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/coupon/user"
      body : "*"
    };
  }
  rpc GetSaleExplain(google.protobuf.Empty) returns (SaleExplains) {
    option (google.api.http) = {
      get : "/sale_explain"
    };
  }

  rpc GetSpuById(IdRequest) returns (SpuDetail) {
    option (google.api.http) = {
      get : "/spu/{id}"
    };
  }
  rpc GetSpuLatest(google.protobuf.Empty) returns (SpuPage) {
    option (google.api.http) = {
      get : "/spu/latest"
    };
  }
  rpc GetSpuByCategory(IdRequest) returns (SpuPage) {
    option (google.api.http) = {
      get : "/spu/category/{id}"
    };
  }

}
message IdRequest { int64 id = 1  [(validate.rules).int64 = {gt: 0}]; }
message nameRequest{ string  name=1; }
message typeRequest{ int32  type=1  [(validate.rules).int32 = {gte: 0}];}
message statusRequest{ int32  status=1 [(validate.rules).int32 = {gte: 0}] ;}


message ThemeByNamesRequest { string names = 1; }

message Tags {
  message Tag {
    int64 id = 1;
    string title = 2;
    uint32 highlight = 3;
    string description = 4;
    uint32 type = 5;
  }
  repeated Tag tag = 1;
}
message GridCategories {
  message GridCategory {
    int64 id = 1;
    string name = 2;
    string title = 3;
    string img = 4;
    int64 categoryId = 5;
    int64 rootCategoryId = 6;
  }
  repeated GridCategory category = 1;
}
message Categories {
  repeated Category roots = 1;
  repeated Category subs = 2;
}
message Category {
  int64 id = 1;
  string name = 2;
  bool is_root = 3;
  string img = 4;
  int64 parent_id = 5;
  int32 index = 6;
}
message Themes { repeated Theme theme = 1; }
message Theme {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string name = 4;
  string entrance_img = 5;

  string internal_top_img = 7;
  string title_img = 8;
  string tpl_name = 9;
  int32 online = 10;
}
message ThemeSpu {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string name = 4;
  string entrance_img = 5;

  string internal_top_img = 7;
  string title_img = 8;
  string tpl_name = 9;
  int32 online = 10;
  repeated Spu spu_list = 11;
}

message Banner {
  int64 id = 1;
  string name = 2;
  string title = 3;
  string img = 4;
  string description = 5;
  repeated BannerItem items = 6;
}
message BannerItem {
  int64 id = 1;
  string img = 2;
  string keyword = 3;
  int32 type = 4;
  string name = 5;
  int64 bannerId = 6;
}
message Spu {
    int64 id = 1;
    string title = 2;
    string subtitle = 3;
    int64 category_id = 4;
    int64 root_category_id = 5;
    string price = 6;
    string img = 7;
    string for_theme_img = 8;
    string description = 9;
    string discount_price = 10;
    string tags = 11;
    int32 online = 13;
  }
message Activity {
  int64 id = 1;
  string title = 2;
  string entrance_img = 3;
  int32 online = 4;
  string remark = 5;
  int64 start_time = 6;
  int64 end_time = 7;
}
message ActivityCoupon {
  int64 id = 1;
  string title = 2;
  string entrance_img = 3;
  int32 online = 4;
  string remark = 5;
  int64 start_time = 6;
  int64 end_time = 7;
  repeated CouponBo coupon = 8;
}


message  CreateUserCouponRequest {
  int64 userId = 1;
  int64 couponId = 2;
}

message Coupons { repeated CouponBo coupon = 1; }
message CouponBo {
  int64 id = 1;
  string title = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  string description = 5;
  double full_money = 6;
  double minus = 7;
  double rate = 8;
  int32 type = 9;
  string remark = 10;
  bool whole_store = 11;
}


message SpuDetail {
  message Specs {
    int64 key_id = 1;
    string key = 2;
    int64 value_id = 3;
    string value = 4;
  }

  message SkuList {
    int64 id = 1;
    double price = 2;
    double discount_price = 3;
    bool online = 4;
    string img = 5;
    string title = 6;
    int64 spu_id = 7;
    int64 category_id = 8;
    int64 root_category_id = 9;
    repeated Specs specs = 10;
    string code = 11;
    uint32 stock = 12;
  }

  message SpuImgList {
    int64 id = 1;
    string img = 2;
    int64 spu_id = 3;
  }

  message SpuDetailImgList {
    int64 id = 1;
    string img = 2;
    int64 spu_id = 3;
    int32 index = 4;
  }

  int64 id = 1;
  string title = 2;
  string subtitle = 3;
  int64 category_id = 4;
  int64 root_category_id = 5;
  string price = 6;
  string img = 7;
  string for_theme_img = 8;
  string description = 9;
  string discount_price = 10;
  string tags = 11;
  int32 online = 13;
  repeated SkuList sku_list = 14;
  repeated SpuImgList spu_img_list = 15;
  repeated SpuDetailImgList spu_detail_img_list = 16;
  int64 sketch_spec_id = 17;
  int64 default_sku_id = 18;
}

message SpuPage {

  message Items {
    int64 id = 1;
    string title = 2;
    string subtitle = 3;
    string img = 4;
    string for_theme_img = 5;
    string price = 6;
    string discount_price = 7;
    string description = 8;
    string tags = 9;
    string sketch_spec_id = 10;
    uint32 max_purchase_quantity = 11;
    uint32 min_purchase_quantity = 12;
  }

  uint32 total = 1;
  uint32 count = 2;
  uint32 page = 3;
  uint32 total_page = 4;
  repeated Items items = 5;
}
message SaleExplains {
  message SaleExplain {
    int64 id = 1;
    bool fixed = 2;
    string text = 3;
    int64 spu_id = 4;
    int32 index = 5;
    int64 replace_id = 6;
  }
  repeated SaleExplain sale_explain = 1;
}